# seek-bzip2

./: README.md  configure.ac
debian/: README.Debian  README.source  changelog  control  copyright  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  seek-bzip2.cron.d.ex  seek-bzip2.default.ex  seek-bzip2.doc-base.EX  watch.ex
src/: Makefile.am
